[tool.poetry]
name = "repl-nix-realtimeaudiotranscriber"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.50.2"
pydub = "^0.25.1"
whisper = "^1.1.10"
ffmpeg-python = "^0.2.0"
requests = "^2.32.3"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
