[tool.poetry]
name = "repl_nix_RealTimeAudioTranscriber"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.50.2"
pydub = "^0.25.1"
openai-whisper = "^1.1.10"
ffmpeg-python = "^0.2.0"
requests = "^2.32.3"
numpy = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
